--- a/public/fonts.css
+++ b/public/fonts.css
@@ -67,3 +67,21 @@
     font-weight: 800;
     font-style: normal;
 }
+
+.love-ya-like-a-sister-regular {
+    font-family: "Love Ya Like A Sister", cursive;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.dokdo-regular {
+    font-family: "Dokdo", system-ui;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.gochi-hand-regular {
+    font-family: "Gochi Hand", cursive;
+    font-weight: 400;
+    font-style: normal;
+}
